@@ -2,6 +2,7 @@
 
 package edu.colorado.phet.gravityandorbits.model;
 
+import edu.colorado.phet.common.phetcommon.model.Property;
 import edu.colorado.phet.common.phetcommon.model.clock.ConstantDtClock;
 
 /**
@@ -14,12 +15,24 @@ public class GravityAndOrbitsClock extends ConstantDtClock {
     public static final double DAYS_PER_TICK = 1;
     public static final int SECONDS_PER_DAY = 86400;
     public static final double DEFAULT_DT = DAYS_PER_TICK * SECONDS_PER_DAY;
+    private final Property<Boolean> stepping;
 
-    public GravityAndOrbitsClock( double dt ) {
-        this( CLOCK_FRAME_RATE, dt );
+    public GravityAndOrbitsClock( double dt, Property<Boolean> stepping ) {
+        super( 1000 / CLOCK_FRAME_RATE, dt );
+        this.stepping = stepping;
     }
 
-    public GravityAndOrbitsClock( int framesPerSecond, double dt ) {
-        super( 1000 / framesPerSecond, dt );
+    @Override
+    public void stepClockWhilePaused() {
+        stepping.setValue( true );//See RewindProperty, it has to know whether the clock is running, paused, stepping, rewinding for application specific logic
+        super.stepClockWhilePaused();
+        stepping.setValue( false );
+    }
+
+    @Override
+    public void stepClockBackWhilePaused() {
+        stepping.setValue( true );
+        super.stepClockBackWhilePaused();
+        stepping.setValue( false );
     }
 }
